# BreachRadar

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENT.md  AI_AGENT_GUIDE.md  ARCHITECTURE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CYBER_SECURITY_CHECKLIST.md  Cahier-Des-Charges_BreachRadar.md  Cahier-Des-Charges_LeakMonitor.md  Cahier-Des-Charges_LeakMonitor__v1.1.md  Cahier-Des-Charges_WebUI-BreachRadar.md  Cahier_des_charges_BreachRadar_v2.md  DEPLOYMENT.md  Dockerfile  IA_CHANGE.md  LICENSE  Makefile  PROCEDURE_CHECKS.md  PROJECT_SPECIFICATIONS.md  QUICKSTART.md  README.md  READ_BEFORE_RUN_AUDIT.md  ROADMAP.md  SECURITY.md  SECURITY_AUDIT_04-05-2026.md  SECURITY_BEST-PRACTICE.md  TODO.md  TODO_RansomLook_APIKey.md  ci_results.txt  docker-compose.yml  note_pour_plus_tard.txt  notes_ameliorations_a_faire.txt  pyproject.toml  rapport_npm.txt  tmp.py
.gemini/: GEMINI.md
.gemini/skills/: cicd-expert.skill  settings.json
.gemini/skills/cicd-expert/: SKILL.md
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
backend/: Dockerfile  README.md  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/clients/: __init__.py  base.py  dehashed.py  github_monitor.py  hibp.py  intelx.py  leakcheck.py  pastebin_monitor.py  ransomlook.py  telegram_monitor.py
backend/app/core/: config.py  database.py  group_names.yaml  init_db.py  redis.py  security.py  source_registry.py  sources.yaml
backend/app/dependencies/: auth.py
backend/app/engine/: __init__.py  aggregator.py  cve_monitor.py  intelligence_monitor.py  logic.py  orchestrator.py  ransom_tracker.py  sanitizer.py  scheduler.py
backend/app/models/: __init__.py  api_key.py  audit_log.py  cve.py  finding.py  ransom.py  report.py  scan.py  settings.py  user.py
backend/app/notifications/: __init__.py  engine.py
backend/app/report/: __init__.py  engine.py
backend/app/report/locales/: en.json  fr.json
backend/app/report/templates/: notification.txt.j2  report.html.j2  report.md.j2
backend/app/resolver/: __init__.py  email_resolver.py
backend/app/routers/: api_keys.py  auth.py  cve.py  dashboard.py  health.py  intelligence.py  ransomlook.py  reports.py  scans.py  settings.py  users.py  webhooks.py
backend/app/schemas/: auth.py  common.py  cve.py  finding.py  scan.py  user.py
backend/tests/: conftest.py  test_admin_mfa.py  test_aggregator.py  test_cve_monitor.py  test_mfa_functional.py  test_mfa_ratelimit.py  test_orchestrator.py  test_ransom_tracker.py  test_sanitizer.py  test_security.py  test_source_registry.py
backend/tests/test_clients/: test_hibp.py  test_ransomlook.py
breachradar/: __init__.py  main.py
breachradar/clients/: base.py  dehashed.py  github_monitor.py  github_webhook.py  hibp.py  intelx.py  leakcheck.py  pastebin_monitor.py  ransomlook.py  telegram_monitor.py
breachradar/config/: __init__.py  settings.py  source_registry.py
breachradar/core/: aggregator.py  orchestrator.py  ransom_tracker.py  sanitizer.py  scheduler.py
breachradar/models/: __init__.py  finding.py  ransom.py  report.py
breachradar/notifications/: engine.py
breachradar/report/: engine.py
breachradar/resolver/: email_resolver.py
frontend/: .dockerignore  Dockerfile  README.md  next.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
frontend/.next/: app-build-manifest.json  trace
frontend/messages/: en.json  fr.json
frontend/src/: middleware.ts
guides/: ADD_CONNECTOR.md
leakmonitor/: __init__.py  main.py
leakmonitor/clients/: __init__.py  base.py  dehashed.py  github_monitor.py  github_webhook.py  hibp.py  intelx.py  leakcheck.py  pastebin_monitor.py  ransomlook.py  telegram_monitor.py
leakmonitor/config/: __init__.py  settings.py  source_registry.py
leakmonitor/core/: __init__.py  aggregator.py  orchestrator.py  ransom_tracker.py  sanitizer.py  scheduler.py
leakmonitor/models/: __init__.py  finding.py  ransom.py  report.py
leakmonitor/notifications/: __init__.py  engine.py
leakmonitor/report/: __init__.py  engine.py
leakmonitor/resolver/: __init__.py  email_resolver.py
ransomlook_config/: generic.json  patch_api.py  patch_redis.py  start_local.sh
reports/: .gitkeep
scripts/: test_intelligence.py  verify_sanitizer.py
security_audits/: AUDIT_INSTRUCTIONS.md  TECH_STACK.md
tests/: conftest.py  test_aggregator.py  test_orchestrator.py  test_ransom_tracker.py  test_sanitizer.py  test_security.py  test_source_registry.py
tests/test_clients/: test_hibp.py  test_ransomlook.py
webui/: .env.example
webui/backend/: Dockerfile  requirements.txt
(+175 files in other folders)
