[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "breachradar"
version = "0.1.0"
description = "Outil de détection de fuites de données ciblé sur un domaine — OSINT défensif"
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }

dependencies = [
    # HTTP & Async
    "httpx>=0.27",
    "aiohttp>=3.9",
    "tenacity>=8.3",

    # Parsing & données
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "orjson>=3.10",
    "pyyaml>=6.0",

    # Sécurité & cryptographie
    "cryptography>=42",
    "passlib>=1.7",
    "python-dotenv>=1.0",

    # CLI & console
    "typer>=0.12",
    "rich>=13.7",

    # Scheduling
    "apscheduler>=3.10",
    "croniter>=2.0",

    # Rapports
    "jinja2>=3.1",

    # Monitoring de flux
    "feedparser>=6.0",
]

[project.optional-dependencies]
pdf = ["weasyprint>=62"]
telegram = ["telethon>=1.36"]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "respx>=0.21",
    "ruff>=0.4",
    "mypy>=1.10",
    "types-pyyaml",
    "types-passlib",
]

[project.scripts]
breachradar = "breachradar.main:app"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "S", "B", "A", "C4", "RET", "SIM"]
ignore = [
    "S101",  # assert utilisé dans les tests
    "S603",  # subprocess (pour theHarvester)
]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["breachradar"]
omit = ["tests/*"]

[tool.hatch.build.targets.wheel]
packages = ["breachradar"]
