[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "breachradar-backend"
version = "0.2.1"
description = "FastAPI Backend & BreachRadar Engine"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    # FastAPI & API Stack
    "fastapi>=0.115.5",
    "uvicorn[standard]>=0.32.1",
    "python-multipart>=0.0.18",

    # Database
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",

    # Redis (sessions + rate limiting)
    "redis[hiredis]>=5.2.1",
    "slowapi>=0.1.9",

    # Authentication & Security
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt<4.0.0",
    "pyotp>=2.9.0",
    "qrcode[pil]>=8.0",

    # HTTP & Async
    "httpx>=0.27.2",
    "aiohttp>=3.14.0",
    "idna>=3.16",
    "urllib3>=2.7.0",
    "tenacity>=8.3",
    "requests>=2.33.0",
    "certifi>=2024.7.4",

    # Data & Validation
    "pydantic>=2.10.3",
    "pydantic-settings>=2.6.1",
    "email-validator>=2.2.0",
    "orjson>=3.10",
    "pyyaml>=6.0",

    # Scheduling
    "apscheduler>=3.10",
    "croniter>=2.0",

    # Mail & Reports
    "aiosmtplib>=3.0.2",
    "jinja2>=3.1.6",

    # Utils
    "python-dotenv>=1.0.1",
    "cryptography>=46.0.6",
    "feedparser>=6.0",
]

[project.optional-dependencies]
pdf = ["weasyprint>=62"]
telegram = ["telethon>=1.36"]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "respx>=0.21",
    "ruff>=0.4",
    "mypy>=1.10",
    "bandit>=1.7.0",
    "types-pyyaml",
    "types-passlib",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "S", "B", "A", "C4", "RET", "SIM"]
ignore = [
    "S101", # assert utilisé dans les tests
    "S603", # subprocess (pour theHarvester)
    "B008", # Depends in default args (FastAPI)
    "E501", # Line too long
    "E402", # Module level import not at top (needed in tests)
    "F401", # Unused import (used for re-exports in __init__.py)
    "A002", # Shadowing builtins (e.g. format)
    "B904", # Exception chaining (too many to fix manually right now)
    "S105", # Hardcoded password (intentional in tests)
    "S324", # Insecure hash (SHA-1 required by HIBP)
    "S104", # Binding to all interfaces (false positive in scan schema)
    "S110", # try-except-pass (sometimes intended)
    "SIM117", # nested with statements (intentional in some tests)
]

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true
check_untyped_defs = false
warn_return_any = false
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["app"]
omit = ["tests/*"]

[tool.hatch.build.targets.wheel]
packages = ["app"]
